--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "bugs": {
     "url": "https://github.com/f/vuex-loading/issues"
   },
-  "main": "dist/vuex-loading.js",
+  "main": "src/vuex-loading.js",
   "files": [
     "src/vuex-loading.js",
+    "src/spinners",
     "LICENSE",
     "README.md"
   ],
