--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
   "bugs": {
     "url": "https://github.com/f/vuex-loading/issues"
   },
-  "main": "src/vuex-loading.js",
+  "main": "dist/vuex-loading.js",
   "files": [
-    "src/vuex-loading.js",
-    "src/spinners",
+    "dist/vuex-loading.js",
+    "dist/vuex-loading.min.js",
+    "src",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
+    "build": "rollup --environment NODE_ENV:production -c build/rollup.config.js && uglifyjs dist/vuex-loading.js --comments -o dist/vuex-loading.min.js",
     "test": "exit 0;",
     "precommit": "lint-staged"
   },
@@ -41,17 +43,14 @@
     ]
   },
   "devDependencies": {
-    "babel-jest": "^20.0.3",
-    "babel-preset-env": "^1.5.2",
-    "dom-storage": "^2.0.2",
-    "eslint": "^3.11.1",
-    "husky": "^0.13.3",
-    "jest": "^20.0.4",
-    "lint-staged": "^3.4.0",
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.2.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.1",
     "prettier": "^1.1.0",
-    "rollup": "^0.36.0",
-    "rollup-plugin-buble": "^0.14.0",
-    "uglify-js": "^2.7.3",
+    "rollup": "^0.45.1",
+    "rollup-plugin-buble": "^0.15.0",
+    "uglify-js": "^3.0.24",
     "vue": "^2.0.0",
     "vuex": "^2.0.0"
   },
