--- a/example/package.json
+++ b/example/package.json
@@ -1,16 +1,18 @@
 {
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack webpack.config.js"
   },
   "dependencies": {
-    "vue": "^2.0.0",
-    "vuex": "^2.0.0"
+    "vue": "^2.4.1",
+    "vuex": "^2.0.0",
+    "vuex-loading": "^0.1.9"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.4.0",
-    "webpack": "^3.1.0",
+    "webpack": "^3.2.0",
     "webpack-dev-server": "^2.2.0"
   }
 }
