--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "precommit": "lint-staged",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "dev-vuex": "poi examples/vuex-example/index.js",
-    "dev-default": "poi examples/default-example/index.js"
+    "dev-default": "poi examples/default-example/index.js",
+    "dev-wrap": "poi examples/wrap-example/index.js"
   },
   "lint-staged": {
     "src/**/*.js": [
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
