--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "bugs": {
     "url": "https://github.com/f/vuex-loading/issues"
   },
-  "main": "src/vue-loading.js",
-  "browser": "dist/vue-loading.js",
+  "main": "dist/vue-loading.js",
   "files": [
     "dist",
     "src"
@@ -28,7 +27,7 @@
   "scripts": {
     "test": "exit 0;",
     "precommit": "lint-staged",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "dev-vuex": "poi examples/vuex-example/index.js",
     "dev-vue": "poi examples/vue-example/index.js",
     "dev-wrap": "poi examples/wrap-example/index.js"
