--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.49",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.0-beta.3",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
     "eslint": "^4.2.0",
