--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-wait",
   "description": "Vue Plugin for Global Loading Management",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "license": "MIT",
   "author": "Fatih Kadir Akın <fatihkadirakin@gmail.com>",
   "keywords": [
@@ -22,7 +22,8 @@
   "main": "dist/vue-wait.js",
   "files": [
     "dist",
-    "src"
+    "src",
+    "nuxt"
   ],
   "scripts": {
     "test": "exit 0;",
