--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,7 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-runtime"],
+  "plugins": [
+    "@babel/plugin-transform-runtime"
+  ],
   "comments": false
 }
