--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
     "epic-spinners": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
     "eslint": "^4.2.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.1.3",
@@ -68,8 +69,5 @@
   },
   "peerDependencies": {
     "vue": "^2.5.16"
-  },
-  "dependencies": {
-    "matcher": "^1.1.1"
   }
 }
