--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/f/vue-wait/issues"
   },
-  "main": "dist/vue-wait.js",
+  "main": "index.js",
   "types": "src/types/index.d.ts",
   "files": [
     "dist",
@@ -31,6 +31,7 @@
     "test": "exit 0;",
     "precommit": "lint-staged",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "bundle": "npm run build; npm run build -- --env=v3",
     "dev-transition": "poi examples/transition-example/index.js",
     "dev-vuex": "poi examples/vuex-example/index.js",
     "dev-vue": "poi examples/vue-example/index.js",
@@ -48,10 +49,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "babel-loader": "^8.0.0-beta.3",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
+    "@vue/compiler-sfc": "^3.1.5",
+    "babel-loader": "^8.2.2",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
     "epic-spinners": "^1.0.3",
@@ -63,12 +65,13 @@
     "prettier": "^1.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.2.4",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "vuex": "^3.0.1",
-    "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.2"
+    "vue-loader": "^16.3.3",
+    "vue-loader-old": "npm:vue-loader@^15.9.6",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.2",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
     "vue": "^2.5.16"
